# paragraph

./: .env  README.md  compose.yaml  compose.yml
backend/: .gitignore  Dockerfile  README.md  all_laws.py  law_builder.py  law_model.py  linker.py  pyproject.toml  scraper.py  scrapitem_model.py
backend/config/: config.yml
backend/src/paraback/: __init__.py  __main__.py  main.py  orchestrator.py  streamlitapp.py  util.py  version.py
backend/src/paraback/linking/: RegexLinker.py  hybrid_textspan_linker.py  law_linker.py  law_name_searcher.py  linker.py  openai_textspan_linker.py  openai_ts_linker.py  regex_textspan_linker.py  regex_ts_linker.py  textspan_linker.py
backend/src/paraback/llmconnection/: name_preprocessor.py
backend/src/paraback/models/: law_model.py  link.py
backend/src/paraback/saving/: InOut.py  mongo_connector.py
backend/src/paraback/scraping/: downloader.py  law_builder.py  nltk_downloader.py  scraper.py
backend/tests/: test_db_connection.py  test_kasus_generator.py  test_law_linker.py  test_linker.py  test_parser.py  test_scraper.py  test_textspan_linker.py  test_util.py
backend/tests/linking/: test_finding.py  test_law_linker.py  test_textspan_linker.py
backend/tests/resources/: eWpG.html  eWpG.json
frontend/: Dockerfile  jest.config.ts  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/data/: eWpGmanual.json  eWpGnew.json  eWpGprod.json
frontend/src/: app.html
frontlex/: Dockerfile  README.md  hierarchy.md  package-lock.json  package.json  svelte.config.js  vite.config.js
frontlex/src/lib/law/: CSDR  (+1 more)
(+71 files in other folders)
