[tool.poetry]
name = "paraback"
version = "0.1.0"
description = "Package for parsing and linking german laws"
authors = ["Marc Schneider <marc@shnei.de>"]
license = "Proprietary"
packages = [{ include = "paraback", from = "src" }, ]
include = ["src/paraback/res/*"]

[tool.poetry.scripts]
paraback = "paraback.main:app"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
typer = {extras = ["all"], version = "^0.7.0"}
importlib-metadata = {version = "^1.0", python = "<3.8"}
requests-html = "^0.10.0"
nltk = "^3.8.1"
pydantic = "^2.3.0"
pymongo = "^4.6.1"
tqdm-loggable = "^0.2"
openai = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.10"
pre-commit = "^2.20"
pytest = "^7.2"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
log_cli = 1
log_cli_level = "WARNING"
log_cli_format = "[%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
